# housing-regression

./: .gitignore  README.md  pyproject.toml  train.py
reports/: metrics.json  worst_predictions.csv
src/housing/: __init__.py  data.py  evaluate.py  features.py  model.py
tests/: test_pipeline.py
